adicionado novo tipo de lição: combinar.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
             android:exported="false"
             android:theme="@style/Theme.PalmsLibras.NoActionBar" />
 
+        <activity android:name=".activities.UnitResultsActivity" />
     </application>
 
 </manifest>
