AGP atualizado para 8.11.2 - minSdk atualizado para 24 - JDK atualizado para 21

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,10 @@
             android:theme="@style/Theme.PalmsLibras.NoActionBar" />
 
         <activity android:name=".activities.UnitResultsActivity" />
+        <activity
+            android:name=".activities.CourseActivity"
+            android:exported="false"
+            android:theme="@style/Theme.PalmsLibras.NoActionBar" />
     </application>
 
 </manifest>
